--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/claudiact6/FriendFinder#readme",
   "dependencies": {
     "express": "^4.16.4",
+    "fs": "0.0.1-security",
     "path": "^0.12.7"
   }
 }
